src/style.css
@import url("https://fonts.googleapis.com/css2?family=Knewave&display=swap");
@import url("https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&display=swap");

@import "tailwindcss";

@theme {
  --font-knewave: "Knewave", system-ui;
  --font-dynapuff: "DynaPuff", system-ui;
}

* {
  @apply transition-all duration-300;
}

body {
  @apply w-screen h-screen;
}

header {
  @apply absolute top-0 w-screen flex justify-center items-center h-fit p-6 font-knewave bg-blue-400 shadow-lg shadow-black;
}

header svg,
#menu-top-bar svg {
  @apply w-14 h-14 absolute p-2 cursor-pointer top-4 right-5;
}
header svg:hover,
#menu-top-bar svg:hover {
  @apply bg-black/30 rounded-full;
}
header svg:active,
#menu-top-bar svg:active {
  @apply bg-black/50;
}

main {
  @apply font-dynapuff w-screen h-screen flex flex-col justify-center items-center gap-18 bg-linear-to-b from-yellow-200 via-green-600 to-blue-800;
}

main a {
  @apply cursor-pointer;
}
main a:hover {
  @apply -translate-y-1 shadow-lg;
}
main a:active {
  @apply translate-y-1.5 shadow-sm;
}

#menu {
  @apply w-screen md:w-1/3 h-screen md:h-fit md:rounded-3xl shadow-xl shadow-black absolute top-0 md:top-30 -right-250 z-20 bg-blue-400 p-6 font-dynapuff;
}
#menu-top-bar {
  @apply flex justify-between items-center p-5 bg-blue-500 rounded-3xl text-3xl;
}
#buttons-menu {
  @apply flex flex-col justify-center items-center gap-6 mt-12;
}
#buttons-menu button {
  @apply cursor-pointer rounded-3xl w-full h-fit p-4 flex justify-start items-center text-lg gap-6;
}
#buttons-menu button:hover {
  @apply bg-gray-600/30;
}
#buttons-menu button:active {
  @apply bg-gray-600/60;
}
#buttons-menu svg {
  @apply w-10 h-10;
}
#menu-top-bar svg {
  @apply static;
}

#quiz-section div div button {
  @apply w-full h-fit p-3 rounded-3xl bg-red-900 shadow-md shadow-black text-lg text-white cursor-pointer;
}
#quiz-section div div button:hover {
  @apply shadow-lg -translate-y-1;
}
#quiz-section div div button:active {
  @apply shadow-sm translate-y-1.5;
}

